@@ -99,16 +99,10 @@ if test "$GCC" = "yes" ; then
 			-Werror \
 			-Wno-div-by-zero \
 			-fnothrow-opt \
-			-ffor-scope \
 			-fstrict-enums \
-			-fstrict-aliasing \
-			-Wstrict-aliasing \
-			-funit-at-a-time \
 			-pedantic \
 			-fno-nonansi-builtins \
 			-Wall \
-			-Wmultichar \
-			-W \
 			-Wextra \
 			-Wfloat-equal \
 			-Wundef \
@@ -122,18 +116,14 @@ if test "$GCC" = "yes" ; then
 			-Wlogical-op \
 			-Woverlength-strings \
 			-Wredundant-decls \
-			-Wsign-compare \
 			-Wwrite-strings  \
 			-Wnon-virtual-dtor \
-			-Wreorder \
 			-Wold-style-cast \
 			-Woverloaded-virtual \
 			-Wsign-promo \
 			-Wstrict-null-sentinel \
 			-Wformat-security \
 			-Winit-self \
-			-Wswitch \
-			-Wmissing-field-initializers \
 			-Wmissing-include-dirs \
 			-Wunused
 	fi
